fix: changed testimonials text for adaptive, animals order

--- a/src/index.html
+++ b/src/index.html
@@ -96,8 +96,11 @@
                                     <h4 class="card__title">Giant pandas</h4>
                                     <p class="card__subtitle">Native to Southwest China</p>
                                 </div>
-                                <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
-                                    alt=" crossed banana and bamboo icon shows the animal is herbivore">
+                                <picture>
+                                    <source srcset="/img/icons/banana-bamboo_icon-sm.png" media="(max-width: 321px)">
+                                    <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
+                                        alt=" crossed banana and bamboo icon shows the animal is herbivore">
+                                </picture>
                             </div>
                         </article>
                         <article class="card card--2">
@@ -114,15 +117,18 @@
                                     <h4 class="card__title">Eagles</h4>
                                     <p class="card__subtitle">Native to South America</p>
                                 </div>
-                                <img src="img/icons/meet-fish_icon.png" class="card__icon"
-                                    alt=" crossed banana and bamboo icon shows the animal is carnivore">
+                                <picture>
+                                    <source srcset="/img/icons/meet-fish_icon-sm.png" media="(max-width: 321px)">
+                                    <img src="img/icons/meet-fish_icon.png" class="card__icon"
+                                        alt="crossed banana and bamboo icon shows the animal is carnivore">
+                                </picture>
                             </div>
                         </article>
                         <article class="card card--3">
                             <div class="card__image">
                                 <picture>
                                     <source srcset="img/animals/3/gorillas-md.jpg" media="(max-width: 640px)">
-                                    <source srcset="img/animals/3/cheetahs-lg.jpg" media="(max-width: 1000px)">
+                                    <source srcset="img/animals/3/gorillas-lg.jpg" media="(max-width: 1000px)">
 
                                     <img src="img/animals/3/gorillas.jpg" class="card__image" alt="gorillas">
                                 </picture>
@@ -132,16 +138,17 @@
                                     <h4 class="card__title">Gorillas</h4>
                                     <p class="card__subtitle">Native to Congo</p>
                                 </div>
-                                <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
-                                    alt=" crossed banana and bamboo icon shows the animal is herbivore">
+
+                                <picture>
+                                    <source srcset="/img/icons/banana-bamboo_icon-sm.png" media="(max-width: 321px)">
+                                    <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
+                                        alt=" crossed banana and bamboo icon shows the animal is herbivore">
+                                </picture>
                             </div>
                         </article>
                         <article class="card card--4">
                             <div class="card__image">
                                 <picture>
-                                    <source srcset="img/animals/4/alligators-md.jpg" media="(max-width: 640px)">
-                                    <source srcset="img/animals/4/gorillas-lg.jpg" media="(max-width: 1000px)">
-
                                     <img src="img/animals/4/sloths.jpg" class="card__image" alt="Two-toed sloths">
                                 </picture>
                             </div>
@@ -150,14 +157,21 @@
                                     <h4 class="card__title">Two-toed Sloth</h4>
                                     <p class="card__subtitle">Mesoamerica, South America</p>
                                 </div>
-                                <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
-                                    alt=" crossed banana and bamboo icon shows the animal is herbivore">
+
+                                <picture>
+                                    <source srcset="/img/icons/banana-bamboo_icon-sm.png" media="(max-width: 321px)">
+
+                                    <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
+                                        alt=" crossed banana and bamboo icon shows the animal is herbivore">
+
+                                </picture>
+
                             </div>
                         </article>
                         <article class="card card--5">
                             <div class="card__image">
                                 <picture>
-                                    <source srcset="img/animals/5/alligators-lg.jpg" media="(max-width: 1000px)">
+                                    <source srcset="img/animals/5/cheetahs-lg.jpg" media="(max-width: 1599px)">
 
                                     <img src="img/animals/5/cheetahs.jpg" class="card__image" alt="cheetahs">
                                 </picture>
@@ -167,14 +181,21 @@
                                     <h4 class="card__title">Cheetahs</h4>
                                     <p class="card__subtitle">Native to Africa</p>
                                 </div>
-                                <img src="img/icons/meet-fish_icon.png" class="card__icon"
-                                    alt=" crossed banana and bamboo icon shows the animal is carnivore">
+
+                                <picture>
+                                    <source srcset="/img/icons/meet-fish_icon-sm.png" media="(max-width: 321px)">
+
+                                    <img src="img/icons/meet-fish_icon.png" class="card__icon"
+                                        alt=" crossed banana and bamboo icon shows the animal is carnivore">
+
+                                </picture>
+
                             </div>
                         </article>
                         <article class="card card--6">
                             <div class="card__image">
                                 <picture>
-                                    <source srcset="img/animals/6/penguins-lg.jpg" media="(max-width: 1000px)">
+                                    <source srcset="img/animals/6/penguins-lg.jpg" media="(max-width: 1599px)">
 
                                     <img src="img/animals/6/penguins.jpg" class="card__image" alt="penguin">
                                 </picture>
@@ -184,8 +205,39 @@
                                     <h4 class="card__title">Penguins</h4>
                                     <p class="card__subtitle">Native to Antarctica</p>
                                 </div>
-                                <img src="img/icons/meet-fish_icon.png" class="card__icon"
-                                    alt=" crossed banana and bamboo icon shows the animal is carnivore">
+
+                                <picture>
+                                    <source srcset="/img/icons/meet-fish_icon-sm.png" media="(max-width: 321px)">
+
+                                    <img src="img/icons/meet-fish_icon.png" class="card__icon"
+                                        alt=" crossed banana and bamboo icon shows the animal is carnivore">
+
+                                </picture>
+
+                            </div>
+                        </article>
+
+                        <article class="card card--7">
+                            <div class="card__image">
+                                <picture>
+                                    <source srcset="img/animals/7/alligators-md.jpg" media="(max-width: 999px)">
+
+                                    <img src="img/animals/7/alligators-lg.jpg" class="card__image" alt="alligators">
+                                </picture>
+                            </div>
+                            <div class="card__info">
+                                <div class="card__text">
+                                    <h4 class="card__title">Alligators</h4>
+                                    <p class="card__subtitle">Native to Southeastern U. S.</p>
+                                </div>
+
+                                <picture>
+                                    <source srcset="/img/icons/meet-fish_icon-sm.png" media="(max-width: 321px)">
+
+                                    <img src="img/icons/meet-fish_icon-sm.png" class="card__icon"
+                                        alt=" crossed banana and bamboo icon shows the animal is herbivore">
+
+                                </picture>
                             </div>
                         </article>
 
