--- a/src/donate.html
+++ b/src/donate.html
@@ -244,6 +244,36 @@
         </div>
     </footer>
 
+    <script>
+        function donatePriceDots() {
+            const priceDots = document.querySelectorAll('.progressbar__dot')
+
+            function priceDotsRemoveActiveClass() {
+                priceDots.forEach(dot => dot.classList.remove('active'))
+            }
+
+            window.addEventListener('resize', () => {
+
+                if (window.innerWidth <= 1600 && window.innerWidth > 999) {
+
+                    console.log('<1600')
+
+                    console.log(priceDots[2])
+                    priceDotsRemoveActiveClass()
+                    priceDots[2].classList.add('active')
+                }
+
+                if (window.innerWidth > 0 && window.innerWidth < 999) {
+
+                    console.log('<640')
+                    priceDotsRemoveActiveClass()
+                    priceDots[5].classList.add('active')
+                }
+
+            })
+        }
+        donatePriceDots()
+    </script>
 </body>
 
 </html>
