feat: add modal menu

--- a/src/donate.html
+++ b/src/donate.html
@@ -8,6 +8,9 @@
 
 <body>
 
+    <!-- modals -->
+    @@include('html/partials/modal-menu.html')
+
     <!-- header include -->
     <header class="header">
         <div class="container">
@@ -280,6 +283,8 @@
         }
         donatePriceDots()
     </script>
+
+    <script src="js/script.min.js"></script>
 </body>
 
 </html>
