--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
     <!-- header include -->
     @@include('html/partials/header.html')
 
+    <!-- modals -->
+    @@include('html/partials/modal-menu.html')
+
     <!-- main -->
     <main>
         <h1 class="seotag">PetStory Online</h1>
